--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <destDir>docs/apidocs</destDir>
+                    <reportOutputDirectory>${basedir}</reportOutputDirectory>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
